tests/ui/feature-gates/feature-gate-rust-tail-cc.stderr
error[E0658]: the extern "tail" ABI is experimental and subject to change
  --> $DIR/feature-gate-rust-tail-cc.rs:3:8
   |
LL | extern "tail" fn apple() {}
   |        ^^^^^^
   |
   = note: see issue #157427 <https://github.com/rust-lang/rust/issues/157427> for more information
   = help: add `#![feature(rust_tail_cc)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "tail" ABI is experimental and subject to change
  --> $DIR/feature-gate-rust-tail-cc.rs:6:12
   |
LL |     extern "tail" fn banana();
   |            ^^^^^^
   |
   = note: see issue #157427 <https://github.com/rust-lang/rust/issues/157427> for more information
   = help: add `#![feature(rust_tail_cc)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "tail" ABI is experimental and subject to change
  --> $DIR/feature-gate-rust-tail-cc.rs:7:12
   |
LL |     extern "tail" fn citrus() {}
   |            ^^^^^^
   |
   = note: see issue #157427 <https://github.com/rust-lang/rust/issues/157427> for more information
   = help: add `#![feature(rust_tail_cc)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "tail" ABI is experimental and subject to change
  --> $DIR/feature-gate-rust-tail-cc.rs:12:12
   |
LL |     extern "tail" fn banana() {}
   |            ^^^^^^
   |
   = note: see issue #157427 <https://github.com/rust-lang/rust/issues/157427> for more information
   = help: add `#![feature(rust_tail_cc)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "tail" ABI is experimental and subject to change
  --> $DIR/feature-gate-rust-tail-cc.rs:16:12
   |
LL |     extern "tail" fn durian() {}
   |            ^^^^^^
   |
   = note: see issue #157427 <https://github.com/rust-lang/rust/issues/157427> for more information
   = help: add `#![feature(rust_tail_cc)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "tail" ABI is experimental and subject to change
  --> $DIR/feature-gate-rust-tail-cc.rs:19:19
   |
LL | type Fig = extern "tail" fn();
   |                   ^^^^^^
   |
   = note: see issue #157427 <https://github.com/rust-lang/rust/issues/157427> for more information
   = help: add `#![feature(rust_tail_cc)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "tail" ABI is experimental and subject to change
  --> $DIR/feature-gate-rust-tail-cc.rs:21:8
   |
LL | extern "tail" {}
   |        ^^^^^^
   |
   = note: see issue #157427 <https://github.com/rust-lang/rust/issues/157427> for more information
   = help: add `#![feature(rust_tail_cc)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
